# cui

./: CMakeLists.txt  config.cmake.in
.github/workflows/: cmake-multi-platform.yml
include/: CUI.h  CUIApplication.h  CUIDirection.h  CUIPadding.h  CUIPosition.h  CUISize.h  CUIText.h  CUIWidget.h  CUIWindow.h
src/: CUIApplication.cpp  CUIPadding.cpp  CUIPosition.cpp  CUISize.cpp  CUIText.cpp  CUIWidget.cpp  CUIWindow.cpp
test/: CMakeLists.txt  test.cpp  window.cpp
